@@ -1,10 +1,11 @@
 /**
- * {@link galyleo.shell.Shell} Notebook run-time classes.
+ * {@link galyleo.shell.Shell} {@link jdk.jshell.JShell} Notebook run-time
+ * classes.
  *
  * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
  * @version $Revision$
  */
 @Manifest.Section
-package galyleo.shell.java;
+package galyleo.shell.jshell;
 
 import ball.annotation.Manifest;
